<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Board Words</string>
    <string name="logIn" tools:ignore="UnusedResources">Login</string>
    <string name="email" tools:ignore="UnusedResources">Email Address</string>
    <string name="name" tools:ignore="UnusedResources">Name</string>
    <string name="enter_name" tools:ignore="UnusedResources">Enter Your Name</string>
    <string name="enter_email" tools:ignore="UnusedResources">Enter Your Email</string>
    <string name="enter_valid_email" tools:ignore="UnusedResources">Enter Valid Email</string>
    <string name="time">Time</string>
    <string name="time00">00</string>
    <string name="time_out">Time Out</string>
    <string name="setTime">Set Time</string>

    <string name="Sec10">10 Second</string>
    <string name="Sec15">15 Second</string>
    <string name="Sec20">20 Second</string>
    <string name="timer_message" tools:ignore="UnusedResources">Oops! Time out</string>
    <string name="setBoardName">Set Board Name</string>
    <string name="start" tools:ignore="UnusedResources">Start</string>
    <string name="congratulation" tools:ignore="UnusedResources">Congratulation</string>
    <string name="next" tools:ignore="UnusedResources">Next</string>
    <string name="congratulation_message" tools:ignore="UnusedResources">You make a word.</string>
    <string name="congratulation_message_complete_board" tools:ignore="UnusedResources">You complete your board level.</string>
    <string name="congratulation_message_complete_five_star" tools:ignore="UnusedResources">You complete your levels.</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="level" tools:ignore="UnusedResources">Level</string>
    <string name="board_list">Board List</string>
    <string name="board_words_list">Records</string>
    <string name="new_game" tools:ignore="UnusedResources">New Game</string>
    <string name="share" tools:ignore="UnusedResources">Share</string>

    <!-- iamdeveloper7272 email AdMob ad unit IDs -->
    <string name="banner_home_footer">"ca-app-pub-7493083145656430/4443173905"</string>
    <string name="interstitial_full_screen">"ca-app-pub-7493083145656430/5919907101"</string>

    <!-- aroraneha8650 email AdMob ad unit IDs -->
   <!-- <string name="banner_home_footer">"ca-app-pub-3104530433760081/6381275451"</string>
    <string name="interstitial_full_screen">"ca-app-pub-3104530433760081/7858008654"</string>-->

    <string name="keyboard">Keyboard</string>
    <string name="atoz">A To Z</string>
    <string name="qwerty">Qwerty</string>
    <string name="shuffle">Shuffle</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
</resources>
